Created prediction model.